// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MyOrdersScreen renders correctly in Snapshot Order Contactless  1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNSScreenStack
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RNSScreen
      collapsable={false}
      forwardedRef={[Function]}
      gestureResponseDistance={
        Object {
          "bottom": -1,
          "end": -1,
          "start": -1,
          "top": -1,
        }
      }
      onAppear={[Function]}
      onDisappear={[Function]}
      onDismissed={[Function]}
      onTransitionProgress={[Function]}
      onWillDisappear={[Function]}
      replaceAnimation="push"
      stackPresentation="push"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      swipeDirection="horizontal"
    >
      <RNSScreenStackHeaderConfig
        backButtonInCustomView={false}
        backgroundColor="rgb(255, 255, 255)"
        color="rgb(0, 122, 255)"
        direction="ltr"
        disableBackButtonMenu={false}
        hidden={false}
        hideBackButton={false}
        hideShadow={true}
        largeTitleHideShadow={false}
        title="default"
        titleColor="rgb(28, 28, 30)"
        topInsetEnabled={false}
        translucent={false}
      />
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "backgroundColor": "rgb(242, 242, 242)",
            },
            Object {
              "backgroundColor": "#ffffff",
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "marginHorizontal": 16,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#E1E9EE",
                "borderRadius": 4,
                "height": 120,
                "key": "Image1",
                "marginBottom": 8,
                "overflow": "hidden",
                "width": "100%",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "height": "100%",
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {
                    "transform": Array [
                      Object {
                        "translateX": undefined,
                      },
                    ],
                  },
                ]
              }
            >
              <BVLinearGradient
                colors={
                  Array [
                    4292995566,
                    4294113532,
                    4292995566,
                  ]
                }
                endPoint={
                  Object {
                    "x": 1,
                    "y": 0,
                  }
                }
                locations={null}
                startPoint={
                  Object {
                    "x": 0,
                    "y": 0,
                  }
                }
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#E1E9EE",
                "borderRadius": 4,
                "height": 120,
                "key": "Image2",
                "marginBottom": 8,
                "overflow": "hidden",
                "width": "100%",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "height": "100%",
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {
                    "transform": Array [
                      Object {
                        "translateX": undefined,
                      },
                    ],
                  },
                ]
              }
            >
              <BVLinearGradient
                colors={
                  Array [
                    4292995566,
                    4294113532,
                    4292995566,
                  ]
                }
                endPoint={
                  Object {
                    "x": 1,
                    "y": 0,
                  }
                }
                locations={null}
                startPoint={
                  Object {
                    "x": 0,
                    "y": 0,
                  }
                }
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#E1E9EE",
                "borderRadius": 4,
                "height": 120,
                "key": "Image3",
                "marginBottom": 8,
                "overflow": "hidden",
                "width": "100%",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "height": "100%",
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {
                    "transform": Array [
                      Object {
                        "translateX": undefined,
                      },
                    ],
                  },
                ]
              }
            >
              <BVLinearGradient
                colors={
                  Array [
                    4292995566,
                    4294113532,
                    4292995566,
                  ]
                }
                endPoint={
                  Object {
                    "x": 1,
                    "y": 0,
                  }
                }
                locations={null}
                startPoint={
                  Object {
                    "x": 0,
                    "y": 0,
                  }
                }
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </RNSScreen>
  </RNSScreenStack>
</RNCSafeAreaProvider>
`;

exports[`MyOrdersScreen renders correctly in Snapshot Order Contactless Skeleton  1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNSScreenStack
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RNSScreen
      collapsable={false}
      forwardedRef={[Function]}
      gestureResponseDistance={
        Object {
          "bottom": -1,
          "end": -1,
          "start": -1,
          "top": -1,
        }
      }
      onAppear={[Function]}
      onDisappear={[Function]}
      onDismissed={[Function]}
      onTransitionProgress={[Function]}
      onWillDisappear={[Function]}
      replaceAnimation="push"
      stackPresentation="push"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      swipeDirection="horizontal"
    >
      <RNSScreenStackHeaderConfig
        backButtonInCustomView={false}
        backgroundColor="rgb(255, 255, 255)"
        color="rgb(0, 122, 255)"
        direction="ltr"
        disableBackButtonMenu={false}
        hidden={false}
        hideBackButton={false}
        hideShadow={true}
        largeTitleHideShadow={false}
        title="default"
        titleColor="rgb(28, 28, 30)"
        topInsetEnabled={false}
        translucent={false}
      />
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "backgroundColor": "rgb(242, 242, 242)",
            },
            Object {
              "backgroundColor": "#ffffff",
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "marginHorizontal": 16,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#E1E9EE",
                "borderRadius": 4,
                "height": 120,
                "key": "Image1",
                "marginBottom": 8,
                "overflow": "hidden",
                "width": "100%",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "height": "100%",
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {
                    "transform": Array [
                      Object {
                        "translateX": undefined,
                      },
                    ],
                  },
                ]
              }
            >
              <BVLinearGradient
                colors={
                  Array [
                    4292995566,
                    4294113532,
                    4292995566,
                  ]
                }
                endPoint={
                  Object {
                    "x": 1,
                    "y": 0,
                  }
                }
                locations={null}
                startPoint={
                  Object {
                    "x": 0,
                    "y": 0,
                  }
                }
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#E1E9EE",
                "borderRadius": 4,
                "height": 120,
                "key": "Image2",
                "marginBottom": 8,
                "overflow": "hidden",
                "width": "100%",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "height": "100%",
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {
                    "transform": Array [
                      Object {
                        "translateX": undefined,
                      },
                    ],
                  },
                ]
              }
            >
              <BVLinearGradient
                colors={
                  Array [
                    4292995566,
                    4294113532,
                    4292995566,
                  ]
                }
                endPoint={
                  Object {
                    "x": 1,
                    "y": 0,
                  }
                }
                locations={null}
                startPoint={
                  Object {
                    "x": 0,
                    "y": 0,
                  }
                }
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#E1E9EE",
                "borderRadius": 4,
                "height": 120,
                "key": "Image3",
                "marginBottom": 8,
                "overflow": "hidden",
                "width": "100%",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "height": "100%",
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {
                    "transform": Array [
                      Object {
                        "translateX": undefined,
                      },
                    ],
                  },
                ]
              }
            >
              <BVLinearGradient
                colors={
                  Array [
                    4292995566,
                    4294113532,
                    4292995566,
                  ]
                }
                endPoint={
                  Object {
                    "x": 1,
                    "y": 0,
                  }
                }
                locations={null}
                startPoint={
                  Object {
                    "x": 0,
                    "y": 0,
                  }
                }
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </RNSScreen>
  </RNSScreenStack>
</RNCSafeAreaProvider>
`;

exports[`MyOrdersScreen renders correctly in Snapshot Order Contactless status Empty  1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNSScreenStack
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RNSScreen
      collapsable={false}
      forwardedRef={[Function]}
      gestureResponseDistance={
        Object {
          "bottom": -1,
          "end": -1,
          "start": -1,
          "top": -1,
        }
      }
      onAppear={[Function]}
      onDisappear={[Function]}
      onDismissed={[Function]}
      onTransitionProgress={[Function]}
      onWillDisappear={[Function]}
      replaceAnimation="push"
      stackPresentation="push"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      swipeDirection="horizontal"
    >
      <RNSScreenStackHeaderConfig
        backButtonInCustomView={false}
        backgroundColor="rgb(255, 255, 255)"
        color="rgb(0, 122, 255)"
        direction="ltr"
        disableBackButtonMenu={false}
        hidden={false}
        hideBackButton={false}
        hideShadow={true}
        largeTitleHideShadow={false}
        title="default"
        titleColor="rgb(28, 28, 30)"
        topInsetEnabled={false}
        translucent={false}
      />
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "backgroundColor": "rgb(242, 242, 242)",
            },
            Object {
              "backgroundColor": "#ffffff",
            },
          ]
        }
      >
        <View
          onLayout={[Function]}
          style={
            Object {
              "marginHorizontal": 16,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#E1E9EE",
                "borderRadius": 4,
                "height": 120,
                "key": "Image1",
                "marginBottom": 8,
                "overflow": "hidden",
                "width": "100%",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "height": "100%",
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {
                    "transform": Array [
                      Object {
                        "translateX": undefined,
                      },
                    ],
                  },
                ]
              }
            >
              <BVLinearGradient
                colors={
                  Array [
                    4292995566,
                    4294113532,
                    4292995566,
                  ]
                }
                endPoint={
                  Object {
                    "x": 1,
                    "y": 0,
                  }
                }
                locations={null}
                startPoint={
                  Object {
                    "x": 0,
                    "y": 0,
                  }
                }
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#E1E9EE",
                "borderRadius": 4,
                "height": 120,
                "key": "Image2",
                "marginBottom": 8,
                "overflow": "hidden",
                "width": "100%",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "height": "100%",
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {
                    "transform": Array [
                      Object {
                        "translateX": undefined,
                      },
                    ],
                  },
                ]
              }
            >
              <BVLinearGradient
                colors={
                  Array [
                    4292995566,
                    4294113532,
                    4292995566,
                  ]
                }
                endPoint={
                  Object {
                    "x": 1,
                    "y": 0,
                  }
                }
                locations={null}
                startPoint={
                  Object {
                    "x": 0,
                    "y": 0,
                  }
                }
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
            </View>
          </View>
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#E1E9EE",
                "borderRadius": 4,
                "height": 120,
                "key": "Image3",
                "marginBottom": 8,
                "overflow": "hidden",
                "width": "100%",
              }
            }
          >
            <View
              style={
                Array [
                  Object {
                    "height": "100%",
                    "position": "absolute",
                    "width": "100%",
                  },
                  Object {
                    "transform": Array [
                      Object {
                        "translateX": undefined,
                      },
                    ],
                  },
                ]
              }
            >
              <BVLinearGradient
                colors={
                  Array [
                    4292995566,
                    4294113532,
                    4292995566,
                  ]
                }
                endPoint={
                  Object {
                    "x": 1,
                    "y": 0,
                  }
                }
                locations={null}
                startPoint={
                  Object {
                    "x": 0,
                    "y": 0,
                  }
                }
                style={
                  Object {
                    "flex": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
    </RNSScreen>
  </RNSScreenStack>
</RNCSafeAreaProvider>
`;

exports[`MyOrdersScreen renders correctly in Snapshot Order Online 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNSScreenStack
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RNSScreen
      collapsable={false}
      forwardedRef={[Function]}
      gestureResponseDistance={
        Object {
          "bottom": -1,
          "end": -1,
          "start": -1,
          "top": -1,
        }
      }
      onAppear={[Function]}
      onDisappear={[Function]}
      onDismissed={[Function]}
      onTransitionProgress={[Function]}
      onWillDisappear={[Function]}
      replaceAnimation="push"
      stackPresentation="push"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      swipeDirection="horizontal"
    >
      <RNSScreenStackHeaderConfig
        backButtonInCustomView={false}
        backgroundColor="rgb(255, 255, 255)"
        color="rgb(0, 122, 255)"
        direction="ltr"
        disableBackButtonMenu={false}
        hidden={false}
        hideBackButton={false}
        hideShadow={true}
        largeTitleHideShadow={false}
        title="default"
        titleColor="rgb(28, 28, 30)"
        topInsetEnabled={false}
        translucent={false}
      />
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "backgroundColor": "rgb(242, 242, 242)",
            },
            Object {
              "backgroundColor": "#ffffff",
            },
          ]
        }
      >
        <RCTSafeAreaView
          emulateUnlessSupported={true}
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <RCTScrollView
            style={
              Object {
                "marginBottom": 80,
              }
            }
          >
            <View>
              <View
                style={
                  Object {
                    "backgroundColor": "#F5F6F9",
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "marginVertical": 16,
                    "paddingHorizontal": 16,
                    "paddingVertical": 16,
                  }
                }
              >
                <Text
                  style={
                    Object {
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 18,
                      "fontWeight": "500",
                      "letterSpacing": 0.15,
                      "lineHeight": 24,
                      "marginBottom": 4,
                      "textAlign": "left",
                    }
                  }
                />
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0.25,
                      "lineHeight": 20,
                      "marginBottom": 4,
                      "textAlign": "left",
                    }
                  }
                />
                <View
                  accessibilityLabel=""
                  accessible={true}
                  onLayout={[Function]}
                  testID=""
                >
                  <View />
                </View>
              </View>
              <View
                style={
                  Array [
                    Object {
                      "backgroundColor": "rgba(0, 0, 0, 0.12)",
                      "height": 0.5,
                    },
                    undefined,
                    Object {
                      "alignSelf": "center",
                      "backgroundColor": "#E6E6E6",
                      "height": 1,
                      "marginBottom": 16,
                      "marginTop": 8,
                      "width": "85%",
                    },
                  ]
                }
              />
              <View
                style={Object {}}
              >
                <Text
                  style={
                    Object {
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 18,
                      "fontWeight": "500",
                      "letterSpacing": 0.15,
                      "lineHeight": 24,
                      "marginBottom": 24,
                      "paddingLeft": 16,
                      "textAlign": "left",
                    }
                  }
                />
                <Text
                  style={
                    Object {
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 18,
                      "fontWeight": "500",
                      "letterSpacing": 0.15,
                      "lineHeight": 24,
                      "paddingLeft": 16,
                      "textAlign": "left",
                    }
                  }
                />
                <Text
                  style={
                    Object {
                      "color": "#000000",
                      "fontFamily": "Roboto-Regular",
                      "fontSize": 14,
                      "fontWeight": "400",
                      "letterSpacing": 0.25,
                      "lineHeight": 20,
                      "paddingLeft": 16,
                      "textAlign": "left",
                    }
                  }
                />
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "#ffffff",
                        "borderRadius": 4,
                        "elevation": 12,
                        "marginVertical": 11,
                        "shadowColor": "#000",
                        "shadowOffset": Object {
                          "height": 5,
                          "width": 0,
                        },
                        "shadowOpacity": 0.34,
                        "shadowRadius": 6.27,
                      },
                      Object {
                        "marginHorizontal": 16,
                      },
                    ]
                  }
                >
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                  >
                    <View
                      style={
                        Object {
                          "flex": 1,
                          "flexDirection": "row",
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "maxHeight": 150,
                            "width": "30%",
                          }
                        }
                      >
                        <Image
                          resizeMode="contain"
                          source={
                            Object {
                              "uri": "undefined",
                            }
                          }
                          style={
                            Object {
                              "borderWidth": 0,
                              "height": "100%",
                              "width": "100%",
                            }
                          }
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "flexDirection": "column",
                            "marginHorizontal": 16,
                            "marginVertical": 10,
                            "width": "62%",
                          }
                        }
                      >
                        <Text
                          style={
                            Object {
                              "color": "#000000",
                              "fontFamily": "Roboto-Medium",
                              "fontSize": 14,
                              "fontStyle": "normal",
                              "fontWeight": undefined,
                              "letterSpacing": 0.8,
                              "lineHeight": 21,
                            }
                          }
                        >
                          undefined
24/02/2023
                        </Text>
                        <Text
                          style={
                            Object {
                              "color": "#979797",
                              "fontFamily": "Roboto-Medium",
                              "fontSize": 13,
                              "fontStyle": "normal",
                              "letterSpacing": 0.8,
                            }
                          }
                        >
                          undefined 4775012
                        </Text>
                        <Text
                          style={
                            Object {
                              "color": "#979797",
                              "fontFamily": "Roboto-Medium",
                              "fontSize": 13,
                              "fontStyle": "normal",
                              "letterSpacing": 0.8,
                            }
                          }
                        >
                          undefined 1
                        </Text>
                        <View
                          style={
                            Object {
                              "flex": 1,
                            }
                          }
                        />
                        <Text
                          style={
                            Object {
                              "alignSelf": "flex-end",
                              "color": "#E31A2C",
                              "fontFamily": "Roboto-Medium",
                              "fontSize": 13,
                              "fontStyle": "normal",
                              "fontWeight": "500",
                              "letterSpacing": 0.8,
                              "paddingTop": 10,
                              "textAlign": "right",
                            }
                          }
                        >
                          undefined $20,00
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  accessibilityLabel=""
                  accessibilityState={
                    Object {
                      "disabled": false,
                    }
                  }
                  accessible={true}
                  collapsable={false}
                  focusable={true}
                  onClick={[Function]}
                  onResponderGrant={[Function]}
                  onResponderMove={[Function]}
                  onResponderRelease={[Function]}
                  onResponderTerminate={[Function]}
                  onResponderTerminationRequest={[Function]}
                  onStartShouldSetResponder={[Function]}
                  style={
                    Object {
                      "alignItems": "center",
                      "justifyContent": "center",
                      "opacity": 1,
                      "paddingVertical": 14,
                    }
                  }
                  testID=""
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#263238",
                          "fontFamily": "Roboto-Regular",
                          "fontSize": 14,
                          "fontWeight": undefined,
                          "letterSpacing": 0.6,
                          "textDecorationLine": "underline",
                        },
                        Object {
                          "color": "#E31A2C",
                        },
                        Object {},
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    Array [
                      Object {
                        "backgroundColor": "rgba(0, 0, 0, 0.12)",
                        "height": 0.5,
                      },
                      undefined,
                      Object {
                        "alignSelf": "center",
                        "backgroundColor": "#E6E6E6",
                        "height": 1,
                        "marginBottom": 16,
                        "marginTop": 8,
                        "width": "85%",
                      },
                    ]
                  }
                />
                <Text
                  style={
                    Object {
                      "fontFamily": "Roboto-Medium",
                      "fontSize": 18,
                      "fontWeight": "500",
                      "letterSpacing": 0.15,
                      "lineHeight": 24,
                      "paddingLeft": 16,
                      "textAlign": "left",
                    }
                  }
                />
                <View>
                  <View
                    style={
                      Array [
                        Object {
                          "backgroundColor": "#ffffff",
                          "borderRadius": 4,
                          "elevation": 2,
                          "marginVertical": 11,
                          "shadowColor": "#000",
                          "shadowOffset": Object {
                            "height": 1,
                            "width": 0,
                          },
                          "shadowOpacity": 0.22,
                          "shadowRadius": 2.22,
                        },
                        Object {
                          "marginHorizontal": 16,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "row",
                          "height": 140,
                          "width": "100%",
                        }
                      }
                    >
                      <View
                        style={
                          Object {
                            "height": "100%",
                            "width": "90%",
                          }
                        }
                      >
                        <View
                          style={
                            Object {
                              "marginHorizontal": 16,
                              "marginVertical": 10,
                            }
                          }
                        >
                          <Text
                            style={
                              Object {
                                "color": "#000000",
                                "fontFamily": "Roboto-Medium",
                                "fontSize": 15,
                                "fontStyle": "normal",
                                "fontWeight": undefined,
                                "letterSpacing": 1,
                              }
                            }
                          >
                            undefined4775012
                          </Text>
                          <Text
                            style={
                              Object {
                                "color": "#979797",
                                "fontFamily": "Roboto-Medium",
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "letterSpacing": 0.8,
                              }
                            }
                          >
                            undefined 24/02/2023
                          </Text>
                          <Text
                            style={
                              Object {
                                "color": "#979797",
                                "fontFamily": "Roboto-Medium",
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "letterSpacing": 0.8,
                              }
                            }
                          >
                            undefined Pagado
                          </Text>
                          <Text
                            style={
                              Object {
                                "color": "#979797",
                                "fontFamily": "Roboto-Medium",
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "letterSpacing": 0.8,
                              }
                            }
                          >
                            undefined 1
                          </Text>
                          <Text
                            style={
                              Object {
                                "color": "#979797",
                                "fontFamily": "Roboto-Medium",
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "letterSpacing": 0.8,
                              }
                            }
                          >
                            undefined agente
                          </Text>
                          <Text
                            style={
                              Object {
                                "color": "#979797",
                                "fontFamily": "Roboto-Medium",
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "letterSpacing": 0.8,
                              }
                            }
                          >
                            undefined $20,00
                          </Text>
                        </View>
                      </View>
                    </View>
                    <View
                      accessibilityLabel=""
                      accessibilityState={
                        Object {
                          "disabled": false,
                        }
                      }
                      accessible={true}
                      collapsable={false}
                      focusable={true}
                      onClick={[Function]}
                      onResponderGrant={[Function]}
                      onResponderMove={[Function]}
                      onResponderRelease={[Function]}
                      onResponderTerminate={[Function]}
                      onResponderTerminationRequest={[Function]}
                      onStartShouldSetResponder={[Function]}
                      style={
                        Object {
                          "alignItems": "center",
                          "alignSelf": "center",
                          "backgroundColor": "#E31A2C",
                          "borderRadius": 5,
                          "justifyContent": "center",
                          "marginBottom": 15,
                          "opacity": 1,
                          "paddingVertical": 10,
                          "width": "80%",
                        }
                      }
                      testID=""
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "justifyContent": "space-between",
                          }
                        }
                      >
                        <Text
                          style={
                            Array [
                              Object {
                                "color": "white",
                                "fontFamily": undefined,
                                "fontSize": 14,
                                "fontStyle": "normal",
                                "fontWeight": undefined,
                              },
                              Object {},
                              Object {},
                            ]
                          }
                        >
                          undefined
                        </Text>
                      </View>
                    </View>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "alignSelf": "center",
                      "flexDirection": "row",
                      "height": 50,
                      "justifyContent": "center",
                      "width": "50%",
                    }
                  }
                >
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderBottomLeftRadius": 4,
                        "borderColor": "#2632384D",
                        "borderTopLeftRadius": 4,
                        "borderWidth": 1,
                        "height": 30,
                        "justifyContent": "center",
                        "opacity": 1,
                        "width": 30,
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      selectable={false}
                      style={
                        Array [
                          Object {
                            "color": "#E31A2C",
                            "fontSize": 30,
                          },
                          undefined,
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                    >
                      󰍞
                    </Text>
                  </View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#E31A2C",
                        "height": 30,
                        "justifyContent": "center",
                        "opacity": 1,
                        "width": 30,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#ffffff",
                          "fontFamily": "Roboto-Regular",
                        }
                      }
                    >
                      1
                    </Text>
                  </View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderColor": "#2632384D",
                        "borderWidth": 1,
                        "height": 30,
                        "justifyContent": "center",
                        "opacity": 1,
                        "width": 30,
                      }
                    }
                  >
                    <Text
                      style={
                        Object {
                          "color": "#E31A2C",
                          "fontFamily": "Roboto-Regular",
                        }
                      }
                    >
                      2
                    </Text>
                  </View>
                  <View
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "alignItems": "center",
                        "backgroundColor": "#ffffff",
                        "borderBottomRightRadius": 4,
                        "borderColor": "#2632384D",
                        "borderTopRightRadius": 4,
                        "borderWidth": 1,
                        "height": 30,
                        "justifyContent": "center",
                        "opacity": 1,
                        "width": 30,
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      selectable={false}
                      style={
                        Array [
                          Object {
                            "color": "#E31A2C",
                            "fontSize": 30,
                          },
                          undefined,
                          Object {
                            "fontFamily": "Material Design Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                    >
                      󰍟
                    </Text>
                  </View>
                </View>
              </View>
            </View>
          </RCTScrollView>
          <Modal
            hardwareAccelerated={false}
            transparent={true}
            visible={false}
          />
        </RCTSafeAreaView>
      </View>
    </RNSScreen>
  </RNSScreenStack>
</RNCSafeAreaProvider>
`;

exports[`MyOrdersScreen renders correctly in Snapshot Order Online No Order 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNSScreenStack
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RNSScreen
      collapsable={false}
      forwardedRef={[Function]}
      gestureResponseDistance={
        Object {
          "bottom": -1,
          "end": -1,
          "start": -1,
          "top": -1,
        }
      }
      onAppear={[Function]}
      onDisappear={[Function]}
      onDismissed={[Function]}
      onTransitionProgress={[Function]}
      onWillDisappear={[Function]}
      replaceAnimation="push"
      stackPresentation="push"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      swipeDirection="horizontal"
    >
      <RNSScreenStackHeaderConfig
        backButtonInCustomView={false}
        backgroundColor="rgb(255, 255, 255)"
        color="rgb(0, 122, 255)"
        direction="ltr"
        disableBackButtonMenu={false}
        hidden={false}
        hideBackButton={false}
        hideShadow={true}
        largeTitleHideShadow={false}
        title="default"
        titleColor="rgb(28, 28, 30)"
        topInsetEnabled={false}
        translucent={false}
      />
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "backgroundColor": "rgb(242, 242, 242)",
            },
            Object {
              "backgroundColor": "#ffffff",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/images/myOrders/no-orders.png",
                }
              }
            />
          </View>
          <Text
            style={
              Object {
                "color": "#263238",
                "fontFamily": "Roboto-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0.2,
                "lineHeight": 28,
                "marginBottom": 25,
                "textAlign": "center",
              }
            }
          />
          <View
            accessibilityLabel=""
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#E31A2C",
                "borderRadius": 5,
                "justifyContent": "center",
                "opacity": 1,
                "paddingVertical": 10,
                "width": "95%",
              }
            }
            testID=""
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "white",
                      "fontFamily": undefined,
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": undefined,
                    },
                    Object {},
                    Object {},
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </RNSScreen>
  </RNSScreenStack>
</RNCSafeAreaProvider>
`;

exports[`MyOrdersScreen renders correctly in Snapshot Order Online Skeleton 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNSScreenStack
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RNSScreen
      collapsable={false}
      forwardedRef={[Function]}
      gestureResponseDistance={
        Object {
          "bottom": -1,
          "end": -1,
          "start": -1,
          "top": -1,
        }
      }
      onAppear={[Function]}
      onDisappear={[Function]}
      onDismissed={[Function]}
      onTransitionProgress={[Function]}
      onWillDisappear={[Function]}
      replaceAnimation="push"
      stackPresentation="push"
      style={
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
      swipeDirection="horizontal"
    >
      <RNSScreenStackHeaderConfig
        backButtonInCustomView={false}
        backgroundColor="rgb(255, 255, 255)"
        color="rgb(0, 122, 255)"
        direction="ltr"
        disableBackButtonMenu={false}
        hidden={false}
        hideBackButton={false}
        hideShadow={true}
        largeTitleHideShadow={false}
        title="default"
        titleColor="rgb(28, 28, 30)"
        topInsetEnabled={false}
        translucent={false}
      />
      <View
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "backgroundColor": "rgb(242, 242, 242)",
            },
            Object {
              "backgroundColor": "#ffffff",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignContent": "center",
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "marginBottom": 20,
              }
            }
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/images/myOrders/no-orders.png",
                }
              }
            />
          </View>
          <Text
            style={
              Object {
                "color": "#263238",
                "fontFamily": "Roboto-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "fontWeight": "500",
                "letterSpacing": 0.2,
                "lineHeight": 28,
                "marginBottom": 25,
                "textAlign": "center",
              }
            }
          />
          <View
            accessibilityLabel=""
            accessibilityState={
              Object {
                "disabled": false,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#E31A2C",
                "borderRadius": 5,
                "justifyContent": "center",
                "opacity": 1,
                "paddingVertical": 10,
                "width": "95%",
              }
            }
            testID=""
          >
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                }
              }
            >
              <Text
                style={
                  Array [
                    Object {
                      "color": "white",
                      "fontFamily": undefined,
                      "fontSize": 14,
                      "fontStyle": "normal",
                      "fontWeight": undefined,
                    },
                    Object {},
                    Object {},
                  ]
                }
              />
            </View>
          </View>
        </View>
      </View>
    </RNSScreen>
  </RNSScreenStack>
</RNCSafeAreaProvider>
`;
